# shepard

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.docx  cimg.h  cmake_install.cmake  compile.txt  data.csv  data0.csv  main.cpp  point.h  random.h  shepard-back.h  shepard.h
